# py-synologydsm-api

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  README.rst  Test.ipynb  codecov.yml  mypy.ini  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml  release-drafter.yml
.github/workflows/: constraints.txt  python-app.yml  release.yml  tests.yml
scripts/: setup
src/synology_dsm/: const.py  exceptions.py  helpers.py  synology_dsm.py
src/synology_dsm/api/: __init__.py
src/synology_dsm/api/audio_station/: __init__.py  library_share_type.py  models.py  play_mode.py  player.py  player_list.py  playlist.py  playlist_status.py  queue_mode.py  remote_player_action.py  remote_player_info.py  remote_player_status.py  repeat_mode.py  shuffle_mode.py  song.py  song_additional_info.py  song_audio.py  song_sort_mode.py  song_tag.py  syno_audio_station_api.py
src/synology_dsm/api/backup/: __init__.py  backup.py  const.py  task.py
src/synology_dsm/api/core/: __init__.py  external_usb.py  hardware.py  security.py  share.py  system.py  system_storage.py  upgrade.py  utilization.py
src/synology_dsm/api/download_station/: __init__.py  task.py
src/synology_dsm/api/dsm/: information.py  network.py
src/synology_dsm/api/file_station/: __init__.py  const.py  models.py
src/synology_dsm/api/hyperbackup/: __init__.py  const.py  hyperbackup.py  task.py
src/synology_dsm/api/photos/: __init__.py  model.py
src/synology_dsm/api/storage/: __init__.py  storage.py
src/synology_dsm/api/surveillance_station/: __init__.py  camera.py
src/synology_dsm/api/video_station/: __init__.py  video.py
src/synology_dsm/api/virtual_machine_manager/: __init__.py  guest.py
tests/: __init__.py  conftest.py  const.py  test_synology_dsm.py  test_synology_dsm_5.py  test_synology_dsm_6.py  test_synology_dsm_7.py  test_synology_hyperbackup.py
tests/__snapshots__/: test_synology_dsm_7.ambr
tests/api_data/dsm_5/: __init__.py  const_5_api_auth.py
tests/api_data/dsm_5/storage/: const_5_storage_storage.py
tests/api_data/dsm_6/: __init__.py  const_6_api_auth.py
tests/api_data/dsm_6/core/: const_6_core_external_usb.py  const_6_core_system.py
tests/api_data/dsm_6/storage/: const_6_storage_storage.py
tests/api_data/dsm_7/: __init__.py  const_7_api_auth.py  const_7_api_info.py
tests/api_data/dsm_7/audio_station/: __init__.py  const_7_audio_station.py
tests/api_data/dsm_7/core/: __init__.py  const_7_core_external_usb.py  const_7_core_hardware.py  const_7_core_upgrade.py
tests/api_data/dsm_7/file_station/: __init__.py  const_7_file_station.py
tests/api_data/dsm_7/hyperbackup/: __init__.py  const_7_hyperbackup.py
tests/api_data/dsm_7/photos/: __init__.py  const_7_photo.py
tests/api_data/dsm_7/videos/: __init__.py  const_7_video.py
tests/api_data/dsm_7/virtual_machine_manager/: __init__.py  const_7_vmm.py
