[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-synologydsm-api"
version = "1.0.8"
description = "Python API for communication with Synology DSM"
authors = [
    {name="Michael Brussk (mib1185)"},
    {name="Quentin POLLET (Quentame)"},
    {name="FG van Zeelst (ProtoThis)"}
]
license = {text = "MIT"}
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
]
keywords=["synology-dsm", "synology"]
requires-python = ">=3.7.0"
dependencies  = ["requests","urllib3"]

[project.urls]
Changelog = "https://github.com/mib1185/py-synologydsm-api/releases"
Repository = "https://github.com/mib1185/py-synologydsm-api"
Documentation = "https://github.com/mib1185/py-synologydsm-api#readme"

[project.scripts]
synologydsm-api = "synology_dsm.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["synology_dsm"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.pylint.MAIN]
ignore = [
    "tests",
    "noxfile.py",
]

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = [
    "id",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-many-return-statements",
]
