[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-synologydsm-api"
version = "2.6.0"
description = "Python API for communication with Synology DSM"
authors = [
    {name="Michael Brussk (mib1185)"},
    {name="Quentin POLLET (Quentame)"},
    {name="FG van Zeelst (ProtoThis)"}
]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
keywords=["synology-dsm", "synology"]
requires-python = ">=3.9"
dependencies  = ["aiohttp"]

[project.urls]
Changelog = "https://github.com/mib1185/py-synologydsm-api/releases"
Repository = "https://github.com/mib1185/py-synologydsm-api"
Documentation = "https://github.com/mib1185/py-synologydsm-api#readme"

[project.scripts]
synologydsm-api = "synology_dsm.__main__:main"

[tool.setuptools.package-data]
synology_dsm = ["py.typed", "*.py", "**/*.py"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["synology_dsm"]

[tool.coverage.report]
show_missing = true
fail_under = 75

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
exclude = ["tests/"]

[tool.pylint.MAIN]
ignore = ["tests"]

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = [
    "id",
]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-positional-arguments",
    "too-many-statements",
    "too-many-return-statements",
]
